Factoring tests are complete